<resources>
    <string name="app_name">MAD_Assignment1</string>
    <string name="Friends">Friends</string>
    <string name="Meetings">Meetings</string>
    <string name="addFriendBtn">Add Friend</string>
    <string name="nameLbl">Name: </string>
    <string name="emailLbl">Email: </string>
    <string name="birthdayLbl">Birthday: </string>
    <string name="birthDayText">Select birthday here</string>
    <string name="saveBtn">Save</string>
    <string name="deleteBtn">Delete Friend</string>
    <string name="addMeetingBtn">Add meeting</string>
    <string name="discardBtn">Discard</string>
    <string name="titleLbl">Title:</string>
    <string name="dateLbl">Date:</string>
    <string name="startTimeLbl">Start time:</string>
    <string name="endTimeLbl">End time:</string>
    <string name="viewLocationBtn">View Location</string>
    <string name="yourLocationBtn">Your Location</string>
    <string name="attendeeTV">Attendee: </string>

    <string name="locationLbl">Location: </string>

    <string name="date">Select date here</string>
    <string name="startTime">Select start time here</string>
    <string name="endTime">Select end time here</string>
    <string name="createBtn">Create</string>
    <string name="addAttendeeBtn">Add attendee</string>
    <string name="completeBtn">Complete</string>
    <string name="title_activity_your_location">Map</string>
    <string name="title_activity_friend_location">Map</string>


</resources>
