<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="s3538332.mad_s3538332_assignemt1.View.AddMeetingActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleLbl"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/titleTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="24dp"
                android:text="@string/locationLbl"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/locationTF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateLbl"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="18sp"
                android:onClick="dateTVOnClick"
                android:clickable="true"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startTimeLbl"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/startTimeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/startTime"
                android:textAlignment="center"
                android:textSize="18sp"
                android:onClick="startTimeTVOnClick"
                android:clickable="true"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endTimeLbl"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/endTimeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/endTime"
                android:textAlignment="center"
                android:textSize="18sp"
                android:onClick="endTimeTVOnClick"
                android:clickable="true"/>

            <Button
                android:id="@+id/addAttendeeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addAttendeeBtn" />

            <Button
                android:id="@+id/createBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createBtn" />

            <Button
                android:id="@+id/discardBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="discardBtnOnClick"
                android:text="@string/discardBtn" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
